--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #ba30a3;
+    background-color: #dcd874;
     margin: 0;
     padding: 20px;
     color: #333;
