--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 
 <div class="container">
-  <h2>Kingdom 3522</h2>
+  <h2>Kingdom 3522 KPI Calculator</h2>
   <input type="text" id="powerInput" placeholder="Enter Power" onkeyup="formatNumber(this)">
   <button onclick="calculateRequirement()">Calculate DKP</button>
   
